testsuite/negative/block3.n
public class Bug1040
{
    private static F(x : int, z : ref int) : int
    {
        result:
        {
            z = match(x)
            {
                | 0 =>
                    result(5); // E: goto
                    x
                | _ =>
                    x
            }
            F(x-1, ref z)
        }
    }

    public static Main(_ : array[string]) : void
    {
        mutable z;
        System.Console.WriteLine(F(2, ref z).ToString())
    }
}